// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Progress > renders with as correctly 1`] = `
"<section data-orientation="horizontal" data-slot="root" class="">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-slot="base" class="ProgressRoot" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" data-slot="indicator" class="ProgressIndicator"></div>
  </div>
  <!--v-if-->
</section>"
`;

exports[`Progress > renders with class correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-slot="base" class="ProgressRoot" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" data-slot="indicator" class="ProgressIndicator"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Progress > renders with color neutral correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="50" aria-label="50%" role="progressbar" data-state="loading" data-value="50" data-max="100" data-slot="base" class="ProgressRoot" style="transform: translateZ(0);">
    <div data-state="loading" data-value="50" data-max="100" data-slot="indicator" class="ProgressIndicator" style="transform: translateX(-50%) !important;"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Progress > renders with max correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <div data-slot="status" class="ProgressStatus" style="width: 50%;">50% </div>
  <div aria-valuemax="4" aria-valuemin="0" aria-valuenow="2" aria-label="50%" role="progressbar" data-state="loading" data-value="2" data-max="4" data-slot="base" class="ProgressRoot" style="transform: translateZ(0);">
    <div data-state="loading" data-value="2" data-max="4" data-slot="indicator" class="ProgressIndicator" style="transform: translateX(-50%) !important;"></div>
  </div>
  <div data-slot="steps" class="ProgressSteps">
    <div data-slot="step" class="ProgressStep">Waiting...</div>
    <div data-slot="step" class="ProgressStep">Cloning...</div>
    <div data-slot="step" class="ProgressStep">Migrating...</div>
    <div data-slot="step" class="ProgressStep">Deploying...</div>
    <div data-slot="step" class="ProgressStep">Done!</div>
  </div>
</div>"
`;

exports[`Progress > renders with max inverted correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <div data-slot="status" class="ProgressStatus" style="width: 50%;">50% </div>
  <div aria-valuemax="4" aria-valuemin="0" aria-valuenow="2" aria-label="50%" role="progressbar" data-state="loading" data-value="2" data-max="4" data-slot="base" class="ProgressRoot" style="transform: translateZ(0);">
    <div data-state="loading" data-value="2" data-max="4" data-slot="indicator" class="ProgressIndicator" style="transform: translateX(-50%) !important;"></div>
  </div>
  <div data-slot="steps" class="ProgressSteps">
    <div data-slot="step" class="ProgressStep">Waiting...</div>
    <div data-slot="step" class="ProgressStep">Cloning...</div>
    <div data-slot="step" class="ProgressStep">Migrating...</div>
    <div data-slot="step" class="ProgressStep">Deploying...</div>
    <div data-slot="step" class="ProgressStep">Done!</div>
  </div>
</div>"
`;

exports[`Progress > renders with modelValue correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="50" aria-label="50%" role="progressbar" data-state="loading" data-value="50" data-max="100" data-slot="base" class="ProgressRoot" style="transform: translateZ(0);">
    <div data-state="loading" data-value="50" data-max="100" data-slot="indicator" class="ProgressIndicator" style="transform: translateX(-50%) !important;"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Progress > renders with status correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <div data-slot="status" class="ProgressStatus" style="width: 50%;">50% </div>
  <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="50" aria-label="50%" role="progressbar" data-state="loading" data-value="50" data-max="100" data-slot="base" class="ProgressRoot" style="transform: translateZ(0);">
    <div data-state="loading" data-value="50" data-max="100" data-slot="indicator" class="ProgressIndicator" style="transform: translateX(-50%) !important;"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Progress > renders with status inverted correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <div data-slot="status" class="ProgressStatus" style="width: 50%;">50% </div>
  <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="50" aria-label="50%" role="progressbar" data-state="loading" data-value="50" data-max="100" data-slot="base" class="ProgressRoot" style="transform: translateZ(0);">
    <div data-state="loading" data-value="50" data-max="100" data-slot="indicator" class="ProgressIndicator" style="transform: translateX(-50%) !important;"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Progress > renders with status slot correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-slot="base" class="ProgressRoot" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" data-slot="indicator" class="ProgressIndicator"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Progress > renders with ui correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-slot="base" class="bg-default" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" data-slot="indicator" class=""></div>
  </div>
  <!--v-if-->
</div>"
`;
